syntax = "proto3";
package roleGet;
option go_package = "/roleGet";
import "kk_etcd_models/pb_role_kk_etcd.proto";
//get role
message RoleGet {
  message Input {
    string  Name = 1;
  }

  message Output {
    kk_etcd_models.PBRole Role = 1;
  }
}