syntax = "proto3";
package kk_etcd;

option go_package = "github.com/cruvie/kk_etcd_go/kk_etcd_models";





message PBUser {
  string  UserName = 2;
  string  Password = 3;
  repeated  string  Roles = 4;
}

message PBListUser {
  repeated PBUser ListUser = 1;
}